Add HTML for app structure

--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
   <title>Tip Calculator</title>
 </head>
 <body>
-  
+  <h1>Tip Calculator</h1>
+  <section id="subtotal">
+    <label for="subtotal-val" id="subtotal-label">Subtotal:</label>
+    <input type="text" id="subtotal-val">
+  </section>
+  <section id="tip-section">
+    <button>18%</button>
+    <button>20%</button>
+    <button>25%</button>
+    <button>CUSTOM TIP</button>
+  </section>
+  <section id="totals-section">
+    <h1>Tip:</h1>
+    <div id="tip-amt"></div>
+    <h1>Total:</h1>
+    <div id="total-amt"></div>
+  </section>
   <script src="js/index.js"></script>
 </body>
 </html>
