--- a/index.html
+++ b/index.html
@@ -8,22 +8,26 @@
   <title>Tip Calculator</title>
 </head>
 <body>
-  <h1>Tip Calculator</h1>
+  <h1 id="title">Tip Calculator</h1>
   <section id="subtotal">
     <label for="subtotal-val" id="subtotal-label">Subtotal:</label>
-    <input type="text" id="subtotal-val">
+    <input type="number" step="0.01" id="subtotal-val">
   </section>
-  <section id="tip-section">
-    <button>18%</button>
-    <button>20%</button>
-    <button>25%</button>
-    <button>CUSTOM TIP</button>
-  </section>
+  <section id="tip-percent-section">
+    <button class="btn">18%</button>
+    <button class="btn">20%</button>
+    <button class="btn">25%</button>
+  </section> 
+  <section id="custom-tip-section">
+    <button class="btn">CUSTOM TIP</button>
+  </section>  
+  
+
   <section id="totals-section">
-    <h1>Tip:</h1>
-    <div id="tip-amt"></div>
-    <h1>Total:</h1>
-    <div id="total-amt"></div>
+    <h1>TIP:</h1>
+    <div id="tip-amt" class="amt"></div>
+    <h1>TOTAL:</h1>
+    <div id="total-amt" class="amt"></div>
   </section>
   <script src="js/index.js"></script>
 </body>
