Add hover effect to buttons

--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     <input type="number" step="0.01" id="subtotal-val">
   </section>
   <section id="tip-percent-section">
-    <button class="btn">18%</button>
-    <button class="btn">20%</button>
-    <button class="btn">25%</button>
+    <button class="btn" id="18-btn">18%</button>
+    <button class="btn" id="20-btn">20%</button>
+    <button class="btn" id="25-btn">25%</button>
   </section> 
   <section id="custom-tip-section">
-    <button class="btn">CUSTOM TIP</button>
+    <button class="btn" id="custom-tip-btn">CUSTOM TIP</button>
   </section>  
   
 
   <section id="totals-section">
     <h1>TIP:</h1>
-    <div id="tip-amt" class="amt"></div>
+    <div id="tip-amt" class="amt">$0.00</div>
     <h1>TOTAL:</h1>
-    <div id="total-amt" class="amt"></div>
+    <div id="total-amt" class="amt">$0.00</div>
   </section>
   <script src="js/index.js"></script>
 </body>
