--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
   <h1 id="title">Tip Calculator</h1>
   <section id="subtotal">
     <label for="subtotal-val" id="subtotal-label">Subtotal:</label>
-    <input type="number" step="0.01" id="subtotal-val">
+    <input type="number" step="0.01" id="subtotal-val" class="input-number" placeholder="Enter subtotal...">
   </section>
   <section id="tip-percent-section">
     <button class="btn" id="18-btn">18%</button>
     <button class="btn" id="20-btn">20%</button>
     <button class="btn" id="25-btn">25%</button>
-  </section> 
-  <section id="custom-tip-section">
-    <button class="btn" id="custom-tip-btn">CUSTOM TIP</button>
+  </section>
+  <button class="btn" id="custom-tip-btn">CUSTOM TIP</button> 
+  <section id="custom-tip-section" class="section-no-show">
+    <input type="number" step="0.01" id="custom-tip-val" class="input-number" placeholder="Enter tip amount...">
+    <button class="btn" id="calculate-btn">DONE</button>
   </section>  
   
 
