--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/style.css">
   <title>Tip Calculator</title>
 </head>
@@ -21,6 +22,11 @@
   </section>
   
   <section id="custom-tip-section" class="section-no-show">
+    <div id="pct-amt-tip-btns">
+      <button class="pct-amt-btn" id="pct-btn">%</button>
+      <button class="pct-amt-btn pct-amt-btn-clicked" id="amt-btn">$</button>
+    </div>
+    
     <input type="number" step="0.01" id="custom-tip-val" class="input-number" placeholder="Enter tip amount...">
     <button class="btn" id="calculate-btn">CALCULATE</button>
   </section>  
