Add number formatter to show values as currency

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1 id="title">Tip Calculator</h1>
   <section id="subtotal">
     <label for="subtotal-val" id="subtotal-label">Subtotal:</label>
-    <input type="number" step="0.01" id="subtotal-val" class="input-number" placeholder="Enter subtotal...">
+    <input type="number" step="0.01" min="0" id="subtotal-val" class="input-number" placeholder="Enter subtotal...">
   </section>
   <section id="tip-btns">
     <button class="btn tip-btn" id="18-btn">18%</button>
