--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
       <button class="pct-amt-btn" id="pct-btn">%</button>
       <button class="pct-amt-btn pct-amt-btn-clicked" id="amt-btn">$</button>
     </div>
-    
-    <input type="number" step="0.01" id="custom-tip-val" class="input-number" placeholder="Enter tip amount...">
+    <input type="number" step="0.01" min="0" id="custom-tip-val" class="input-number" placeholder="Enter tip amount...">
     <button class="btn" id="calculate-btn">CALCULATE</button>
   </section>  
   
